# agent-flow

./: .env  .env.example  .gitignore  DESIGN.md  FRONTEND_RUST_ROADMAP.md  QUICKSTART_E2E.md  W4TD_COMPLETION_REPORT.md  W5TC_ROADMAP_REPAIR.md  W5TD_COMPLETION_REPORT.md  WAVE3_STATUS.md  docker-compose.yml  plan.md
.github/workflows/: ci.yml  e2e-tests.yml
backend/: .env.example  Dockerfile  go.mod  go.sum  sqlc.yaml
backend-rust/: Cargo.toml  Dockerfile
backend-rust/migrations/: 002_create_agents.up.sql  003_create_pipelines.up.sql  006_create_tasks.down.sql  006_create_tasks.up.sql  007_create_execution_runs.down.sql  008_create_agent_logs.down.sql  008_create_agent_logs.up.sql
backend-rust/src/: app_state.rs  config.rs  error.rs  events.rs  health.rs  lib.rs  main.rs
backend-rust/src/api/: mod.rs
backend-rust/src/api/handlers/: mod.rs  projects.rs
backend-rust/src/domain/: mod.rs  project.rs
backend-rust/src/orchestrator/: mod.rs
backend-rust/src/prompt/: mod.rs
backend-rust/src/queue/: mod.rs
backend-rust/src/repo/: mod.rs  projects.rs
backend-rust/src/runner/: claude.rs  dispatcher.rs  mod.rs  options.rs  result.rs  tester.rs  tests.rs
backend-rust/tests/: health_runtime_config.rs  sse_routing.rs
docs/skills/: SKILL.md
scripts/: codex-project.sh
web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.e2e.json  vitest.config.ts
web/e2e/: README.md  SETUP.md  VERIFICATION.md  api-contract.spec.ts  error-path.spec.ts  fixtures.ts  happy-path.spec.ts  task-detail.spec.ts
web/src/: App.tsx  index.css  main.tsx
(+77 files in other folders)
